--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   mobile_scanner: ^5.1.1
   flutter_native_splash: ^2.4.0
   flutter_screenutil: ^5.9.0
-  country_code_picker: ^3.0.0
+  phone_form_field: ^9.2.5
 
 dev_dependencies:
   flutter_test:
