--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_native_splash: ^2.4.0
   flutter_screenutil: ^5.9.0
   phone_form_field: ^9.2.5
+  buttons_tabbar: ^1.3.8
 
 dev_dependencies:
   flutter_test:
