--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_screenutil: ^5.9.0
   phone_form_field: ^9.2.5
   buttons_tabbar: ^1.3.8
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
