--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   phone_form_field: ^9.2.5
   buttons_tabbar: ^1.3.8
   shared_preferences: ^2.2.3
+  infinite_scroll_pagination: ^4.0.0
 
 dev_dependencies:
   flutter_test:
