--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   buttons_tabbar: ^1.3.8
   shared_preferences: ^2.2.3
   infinite_scroll_pagination: ^4.0.0
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
