--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   shared_preferences: ^2.2.3
   infinite_scroll_pagination: ^4.0.0
   dotted_border: ^2.1.0
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
