--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   infinite_scroll_pagination: ^4.0.0
   dotted_border: ^2.1.0
   http: ^1.2.1
+  custom_pop_up_menu: ^1.2.4
+  cached_network_image: ^3.3.1
+  simple_barcode_scanner: ^0.1.1
 
 dev_dependencies:
   flutter_test:
